Implemented product endpoint
